fixed gaps for phone (#68)
* fixed gaps for phone

* fixed naming on cards

* fixed Katies card

* should have fixed team message

* cards a little wider on smaller screens now

* added team photos

* forgot the photos

* Fixing responsiveness for mobile and tablet

* Fixing Navya's name

--- a/src/components/TeamCard/TeamCard.scss
+++ b/src/components/TeamCard/TeamCard.scss
@@ -1,4 +1,5 @@
 @use "~stylesheets/typography";
+@use "~stylesheets/responsiveness";
 
 .Card {
   animation: fadeIn 1s;
@@ -6,8 +7,10 @@
   max-width: 292px;
   min-height: 392px;
   max-height: 500px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 3em 2.5em 0;
+  @media (max-width: 320px) {
+    margin: 3em 10px 0;
+  }
   border-radius: 27px;
   padding-bottom: 10px;
   background:  
@@ -66,7 +69,15 @@
   margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
-  gap: 4rem;
   justify-content: center;
   width: 80%;
+
+  @include responsiveness.screen(large-tablet) {
+    width: 100%;
+  }
+
+  @media (max-width: 400px) {
+    width: 90%;
+    margin-top: 0;
+  }
 }
